<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/app_name"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_userData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/redPrimary"
        app:layout_constraintDimensionRatio="16:6"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_helloUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Olá, Rafael"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_agency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ag: 2030"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textView_helloUser"
        app:layout_constraintStart_toStartOf="@id/textView_helloUser" />

    <TextView
        android:id="@+id/textView_currentAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cc: 01098654-8"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/textView_agency"
        app:layout_constraintStart_toEndOf="@id/textView_agency" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_balance"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/textView_agency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_paid_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/textView_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="18sp"
                android:layout_marginLeft="16dp"
                app:layout_constraintTop_toTopOf="@id/imageView_balance"
                app:layout_constraintStart_toEndOf="@id/imageView_balance"
                app:layout_constraintBottom_toBottomOf="@id/imageView_balance"/>

            <ImageView
                android:id="@+id/imageView_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_expand_less_black_24dp"
                android:layout_margin="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/textView_balanceValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 1.292,00"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/imageView_balance"
                app:layout_constraintStart_toStartOf="@id/imageView_balance" />

            <TextView
                android:id="@+id/textView_balanceLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance_limit"
                app:layout_constraintTop_toBottomOf="@id/textView_balanceValue"
                app:layout_constraintStart_toStartOf="@id/textView_balanceValue"/>

            <TextView
                android:id="@+id/textView_balanceLimitValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="R$ 3.458,00"
                android:layout_marginLeft="8dp"
                app:layout_constraintTop_toTopOf="@id/textView_balanceLimit"
                app:layout_constraintStart_toEndOf="@id/textView_balanceLimit"/>
            
            <View
                android:id="@+id/view_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="32dp"
                android:layout_marginHorizontal="16dp"
                app:layout_constraintTop_toBottomOf="@id/textView_balanceLimit"
                app:layout_constraintStart_toStartOf="@id/textView_balanceLimit" />

            <TextView
                android:id="@+id/textView_extract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_extract"
                android:textColor="@color/redSecundary"
                app:layout_constraintTop_toBottomOf="@id/view_divider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_pay"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/cardView_balance"
        app:layout_constraintTop_toBottomOf="@id/cardView_balance">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_pay"
                android:src="@drawable/ic_payment_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textView_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                app:layout_constraintTop_toBottomOf="@id/imageView_pay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_transfer"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="@id/cardView_pay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_transfer"
                android:src="@drawable/ic_transfer_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textView_transfer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transfer"
                app:layout_constraintTop_toBottomOf="@id/imageView_transfer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView_cell"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="@id/cardView_transfer"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView_cell"
                android:src="@drawable/ic_smartphone_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textView_cell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cell"
                app:layout_constraintTop_toBottomOf="@id/imageView_cell"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/ImageView_finalCard"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@color/redPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView_pay" />

    <TextView
        android:id="@+id/textView_finalCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_card"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="@id/ImageView_finalCard"
        app:layout_constraintBottom_toBottomOf="@id/ImageView_finalCard"
        app:layout_constraintStart_toStartOf="@id/ImageView_finalCard" />

    <TextView
        android:id="@+id/textView_CardFinalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0047"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@id/textView_finalCard"
        app:layout_constraintStart_toEndOf="@id/textView_finalCard" />

    <ImageView
        android:id="@+id/imageView_changeCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="@id/ImageView_finalCard"
        app:layout_constraintBottom_toBottomOf="@id/ImageView_finalCard"
        app:layout_constraintEnd_toEndOf="@id/ImageView_finalCard" />

</androidx.constraintlayout.widget.ConstraintLayout>